--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "homepage": "https://MinasXir.github.io/mpage",
+  "homepage": "https://MinasXir.github.io/mpage/",
   "dependencies": {
     "express": "^4.17.1",
     "gh-pages": "^3.1.0",
